<resources>
    <string name="app_name">Torn Stocks</string>
    <string name="stocks">Stocks</string>
    <string name="triggers">Triggers</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="aaa">AAA</string>
    <string name="_000">$000</string>
    <string name="stock_name_here">Stock Name Here</string>
    <string name="unable_to_retrieve_stock_data">Unable to retrieve stock data</string>
    <string name="api_key">Api Key</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="default_view">Default view</string>
    <string name="detailed_view">Detailed view</string>
    <string name="collapsed_view">Collapsed view</string>
    <string name="concise_view">Concise view</string>
    <string name="stock_name">Stock Name</string>
    <string name="market_cap">Market cap:</string>
    <string name="create">Create</string>
    <string name="price">Price</string>
    <string name="delete_after_triggered">Delete after triggered</string>
    <string name="below">Below</string>
    <string name="single_use">Single use</string>
    <string name="above">Above</string>
    <string name="unable_to_retrieve_triggers">Unable to retrieve triggers</string>
    <string name="cancel">Cancel</string>
    <string name="percentage">Percentage</string>
    <string name="plus">＋</string>
    <string name="minus">−</string>
    <string name="percent">%</string>
    <string name="_0">0</string>
    <string name="how_to_use_this_app">How to use this app</string>
    <string name="how_to_use_desc_1">Torn Stocks provides a way to create triggers to help notify you when stocks reach certain prices. Start by entering your api key in the settings. Next, go to the stock page and click on a stock you would like to create a trigger for. There are various types of triggers to choose from. After it has been created you may view it on the triggers page and edit it by tapping on it. Long press on a trigger to delete it.</string>
    <string name="how_to_use_desc_2">A background process will check your triggers with stock data from the Torn API evey 60 seconds to see if a trigger has been hit. If it has a notification will appear.</string>
    <string name="how_is_your_api_key_used">How is your API key used?</string>
    <string name="api_key_use_desc">Your API key will strictly be used to only fetch the relevant stock data. The background proccess makes an api call every 60 seconds. The stocks page will make an api call every 30 seconds to display the stock data. Your API key is stored locally and can be removed by saving an empty API key in the settings.</string>
    <string name="made_by_uv1">Made by UV1</string>
    <string name="market_cap_">Market Cap</string>
    <string name="total_shares">Total Shares</string>
    <string name="benefit">Benefit</string>
    <string name="type">Type</string>
    <string name="frequency">Frequency</string>
    <string name="requirement">Requirement</string>
    <string name="description">Description</string>
    <string name="lipsum_10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit.</string>
    <string name="available_after">Available After</string>
    <string name="perk">Perk</string>
</resources>