<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_background"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/stock_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/stock_name"
            android:textColor="@color/text_primary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/stock_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stock_name"
            android:background="@null"
            android:textColor="@color/text_primary"
            android:text="@string/_000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stock_name"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:textSize="14sp"
            android:layout_alignBaseline="@id/stock_price"
            android:textColor="@color/text_primary"
            android:text="@string/market_cap" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>