<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginBottom="8dp"
    android:background="@null"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        android:background="@null">

        <TextView
            android:id="@+id/acronym_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/aaa"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/acronym_tv"
            android:background="@null"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/stock_name_here"
            android:textColor="@color/text_primary" />

        <TextView
            android:id="@+id/priceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/_000"
            android:textColor="@color/text_primary"
            android:textSize="32sp" />
    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>