<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        android:background="@null">

        <TextView
            android:id="@+id/acronym_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/aaa"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/acronym_tv"
            android:background="@null"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/stock_name_here"
            android:textColor="@color/text_primary" />

        <TextView
            android:id="@+id/priceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/_000"
            android:textColor="@color/text_primary"
            android:textSize="32sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/market_cap_"
            android:textColor="@color/text_primary" />

        <TextView
            android:id="@+id/market_cap_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/market_cap_"
            android:textColor="@color/text_primary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/total_shares"
            android:textColor="@color/text_primary" />

        <TextView
            android:id="@+id/total_shares_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/market_cap_"
            android:textColor="@color/text_primary" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/benefit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="12dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/text_primary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/benefit_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:id="@+id/show_benefit_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="12dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="12dp"
                    android:text="@string/benefit"
                    android:textColor="@color/text_primary" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/benefit_icon"
                    android:src="@drawable/ic_down" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/benefit_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/type"
                        android:textColor="@color/text_primary" />

                    <TextView
                        android:id="@+id/type_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@null"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/market_cap_"
                        android:textColor="@color/text_primary" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:id="@+id/frequency_label_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/frequency"
                        android:textColor="@color/text_primary" />

                    <TextView
                        android:id="@+id/frequency_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@null"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/market_cap_"
                        android:textColor="@color/text_primary" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/requirement"
                        android:textColor="@color/text_primary" />

                    <TextView
                        android:id="@+id/requirement_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@null"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/market_cap_"
                        android:textColor="@color/text_primary" />
                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:id="@+id/perk_label_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="@null"
                        android:fontFamily="@font/roboto_medium"
                        android:paddingEnd="12dp"
                        android:text="@string/perk"
                        android:textColor="@color/text_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/description_tv" />

                    <TextView
                        android:id="@+id/description_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@null"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="end"
                        android:text="@string/lipsum_10"
                        android:textColor="@color/text_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/perk_label_tv"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/settings_line" />

</LinearLayout>